--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="map">Map</string>
     <string name="list">List</string>
     <string name="status">Status</string>
+    <string name="why">Why</string>
 </resources>
