--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="map">Map</string>
     <string name="list">List</string>
     <string name="status">Status</string>
-    <string name="why">Why</string>
+    <string name="notifications">Notifications</string>
+    <string name="voice">Share</string>
+    <string name="profile">Profile</string>
+    <string name="othermenu">Other</string>
 </resources>
